[package]

name    = "raltc_mod_parser"
version = "0.1.0"
edition = "2021"

[dependencies]

raltc_token = { path = "../../../raltc_token" }

raltc_mod_lexer       = { path = "../raltc_mod_lexer" }
raltc_mod_autocorrect = { path = "../raltc_mod_autocorrect" }
raltc_mod_error       = { path = "../raltc_mod_error" }
